# kthais-everyones-a-critic

./: .gitignore  DockerFile  Dockerfile  README.md  critic.py  pyproject.toml
.github/workflows/: build-and-push.yml  deploy-cloud-run.yml  pr-test.yml
app/: Dockerfile
src/eisa_critic/llm/: llm_groq.py
tests/: app_test.py
